syntax = "proto3";
package proto;
option go_package = "./grpcModels";
option csharp_namespace = "./grpcModels";

service RocketbotORD {
  rpc GetORDDetails (GetOrdDetailsReq) returns (GetOrdDetailsReply) {}

}

message GetOrdDetailsReq {
  string addr = 1;
}

message GetOrdDetailsReply {
  int64 id = 1;
  string ordID = 2;
  string txID = 3;
  string bcAddress = 4;
  string link = 5;
  string contentLink = 6;
}